[metadata]
name = argument-parsing-mistralCeleste
version = 0.0.1
author = Nathan Holt
author_email = author@example.com
description = Parses script Arguments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mistralCeleste/ArgumentParsing
project_urls =
    Bug Tracker = https://github.com/mistralCeleste/ArgumentParsing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src